adl-frontend/src/test/resources/unit/unsupported/error/semantic/attributes/attr6.adl
//#SemanticError GroupId=ATTR ErrorId=ILLEGAL_IDENTIFIER line=5
// attribute: identifier for attribute is too long
primitive attributes.attr6 {
  attribute uint8_t 
  aaaaaaaaaa2aaaaaaaaaa3aaaaaaaaaa4aaaaaaaaaa5aaaaaaaaaa6aaaaaaaaaa7aaaaaaaaaa8aaaaaaaaaa9aaaaaaaaaa10aaaaaaaaaa11aaaaaaaaaa12aaaaaaaaaa13aaaaaaaaaa14aaaaaaaaaa15aaaaaaaaaa16aaaaaaaaaa17aaaaaaaaaa18aaaaaaaaaa19aaaaaaaaaa20aaaaaaaaaa21aaaaaaaaaa22aaaaaaaaaa23aaaaaaaaaa24aaaaaaaaaa25aaaaaaaaaa26_aaaaaaaaaa2aaaaaaaaaa3aaaaaaaaaa4aaaaaaaaaa5aaaaaaaaaa6aaaaaaaaaa7aaaaaaaaaa8aaaaaaaaaa9aaaaaaaaaa10aaaaaaaaaa11aaaaaaaaaa12aaaaaaaaaa13aaaaaaaaaa14aaaaaaaaaa15aaaaaaaaaa16aaaaaaaaaa17aaaaaaaaaa18aaaaaaaaaa19aaaaaaaaaa20aaaaaaaaaa21aaaaaaaaaa22aaaaaaaaaa23aaaaaaaaaa24aaaaaaaaaa25aaaaaaaaaa26 ;
}
